@@ -1,3 +1,7 @@
+2002-04-13  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* exult.cc: Disable right-click-close-gump if dragging.
+
 2002-04-11  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* drag.cc (Dragging_info): If quantity-object is okay_to_take,
